Changelog:

3.22
- Added "Tranquillien, Ghostlands" as a required flight path for Solo route, as it links Silvermoon to EPL.
- Added back "Summoning Shadra" as a prequest to "Venom to the Undercity"
- SoloRoute Companion: Removed "Winterspring" as a mail pick-up spot, added "Stonard" as a mail pick-up spot. Now it matches the other routes.

3.21 (2026-01-27)
- Went through all addon files and cleaned up old/unused code, reducing filesize.
- Removed the 3.15 warning from the about page.
- Fixed lua errors happening if RXP or Questie addons aren't installed/enabled, when tbcprep checks if their quest automation is on.
- Companion: Fixed 'Bank Collect' not working if you didn't have room in the main backpack.
- Added many outland/tbc flight paths to our flightpath tracker
- Added a new command "/tbc resetmarkeditems" that resets all items that are marked to be stored elsewhere (alt, mailbox)
- Updated the "Manual Mail Help" guide on the Extras>Mailbox description, adding steps to mark items.

3.20 (2026-01-26)
- Profession requirements on quests should now work on non-english (enUS) wow clients. Please let us know if it doesn't work
- TBCPrep now turns off RXP & Questie quest automation 10 seconds after logging in / reloading. Can be disabled in the '/tbcprep' settings tab
- TBCprep now warns if RXP/Questie quest automation is enabled every 10 minutes in chat. Can be disabled in the '/tbcprep' settings tab
- It didn't seem possible to disable LeatrixPlus automation from our addon. Please turn it off yourself.
- Companion: 'Collect' button for 'Bags' step should now work when using the bank button to open the companion
- Implemented more of the RXP Guide for the Solo Route (not finished)

3.19 (2026-01-25) 
- Eitrigg's Wisdom (part of Onyxia attunement) should no longer show a warning when picked up.
- "Fel Elemental Rod" for the T0.5 questline is now marked correctly as BoE (Can be mailed and bought on AH).