@@ -127,10 +127,10 @@ local questsMetadata = {
 	[8308] = { name="Brann Bronzebeard's Lost Letter", baseexp=11900, qlvl=60, type="turnin", reqItems="20461-1", routes="Main,Strat,Solo", routePickup="SilithusSouth", routeSection="SilithusSouth", areaType="Zone", area="Silithus", },
 	[8323] = { name="True Believers", baseexp=9300, qlvl=59, type="turnin", reqItems="20404-10", preQuests="8284,8285", routes="Main,Strat,Solo", routePickup="SilithusCave", routeSection="SilithusCave", areaType="Zone", area="Silithus", },
 	[8318] = { name="Secret Communication", baseexp=9550, qlvl=60, type="turnin", reqItems="20404-10", routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
-	[8361] = { name="Abyssal Contacts", baseexp=9550, qlvl=60, type="turnin", reqItems="20513-1", reqRep=609, reqRepRank=6, routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
-	[8332] = { name="Dukes of the Council", baseexp=9550, qlvl=60, type="turnin", reqItems="20513-3,14344-1", reqRep=609, reqRepRank=6, routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
+	[8361] = { name="Abyssal Contacts", baseexp=9550, qlvl=60, type="turnin", reqItems="20513-1", routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
+	[8332] = { name="Dukes of the Council", baseexp=9550, qlvl=60, type="turnin", reqItems="20513-3,14344-1", reqRep=609, reqRepRank=5, routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
 	[8341] = { name="Lords of the Council", baseexp=9550, qlvl=60, type="turnin", reqItems="20514-3,14344-5", reqRep=609, reqRepRank=7, routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
-	[8348] = { name="Signet of the Dukes", baseexp=11900, qlvl=60, type="turnin", reqItems="20514-1", reqRep=609, reqRepRank=7, routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
+	[8348] = { name="Signet of the Dukes", baseexp=11900, qlvl=60, type="turnin", reqItems="20514-1", reqRep=609, reqRepRank=5, routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
 	[8352] = { name="Scepter of the Council", baseexp=14300, qlvl=60, type="turnin", reqItems="20515-1", reqRep=609, reqRepRank=7, routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
 	[9248] = { name="Humble Offering", baseexp=9550, qlvl=60, type="turnin", reqItems="20515-1", reqRep=609, reqRepRank=6, routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
 	[8711] = { name="Blade of Eternal Justice", baseexp=9550, qlvl=60, type="turnin", reqItems="20886-1,20869-2,20861-5,20865-5", playerClass="PALADIN", reqRep=609, reqRepRank=8, routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Raid", area="Ruins of Ahn'Qiraj", },
@@ -233,10 +233,10 @@ local questsMetadata = {
 	[4284] = { name="Crystals of Power", baseexp=7600, qlvl=53, type="turnin", reqItems="11186-7,11188-7,11185-7,11184-7", routes="Main,Strat,Solo", routePickup="Ungoro", routeSection="Ungoro", areaType="Zone", area="Un'Goro Crater", },
 	[6824] = { name="Hands of the Enemy", baseexp=14300, qlvl=60, type="qlog", reqItems="17332-1,17329-1,17331-1,17330-1", preQuests="6804,6805,6821,6822,6823", routes="Main,Strat", routeSection="BayOfStorms", areaType="Raid", area="The Molten Core", },
 	[7486] = { name="A Hero's Reward", baseexp=14300, qlvl=60, type="turnin", preQuests="6804,6805,6821,6822,6823,6824", routes="Main,Strat", routePickup="BayOfStorms", routeSection="BayOfStorms", areaType="Raid", area="The Molten Core", },
-	[8331] = { name="Aurel Goldleaf", baseexp=960, qlvl=60, type="turnin", routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
-	[8343] = { name="Goldleaf's Discovery", baseexp=960, qlvl=60, type="turnin", routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
-	[8349] = { name="Bor WIldmane", baseexp=960, qlvl=60, type="turnin", routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
-	[8351] = { name="Bor Wishes to Speak", baseexp=960, qlvl=60, type="turnin", routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
+	[8331] = { name="Aurel Goldleaf", baseexp=960, qlvl=60, type="turnin", reqRep=609, reqRepRank=5, routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
+	[8343] = { name="Goldleaf's Discovery", baseexp=960, qlvl=60, type="turnin", reqRep=609, reqRepRank=7, routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
+	[8349] = { name="Bor Wildmane", baseexp=960, qlvl=60, type="turnin", reqRep=609, reqRepRank=5, routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
+	[8351] = { name="Bor Wishes to Speak", baseexp=960, qlvl=60, type="turnin", reqRep=609, reqRepRank=7, routes="Main,Strat,Solo", routePickup="SilithusHold2", routeSection="SilithusHold2", areaType="Zone", area="Silithus", },
 	[7163] = { name="Rise and Be Recognized", baseexp=0, qlvl=51, type="turnin", preQuests="7161", reqRep=729, reqRepRank=5, routes="Main,Strat,Solo", routePickup="AV", routeSection="AV", areaType="Battleground", area="Alterac Valley", isScaling=true, scaleRank=1, comments="These AV quests apparently scale UP with level, unlike other quests. Verified from videos from last TBC" },
 	[7164] = { name="Honored Amongst the Clan", baseexp=0, qlvl=51, type="turnin", preQuests="7161", reqRep=729, reqRepRank=6, routes="Main,Strat,Solo", routePickup="AV", routeSection="AV", areaType="Battleground", area="Alterac Valley", isScaling=true, scaleRank=1, comments="These AV quests apparently scale UP with level, unlike other quests. Verified from videos from last TBC" },
 	[7165] = { name="Earned Reverence", baseexp=0, qlvl=51, type="turnin", preQuests="7161", reqRep=729, reqRepRank=7, routes="Main,Strat,Solo", routePickup="AV", routeSection="AV", areaType="Battleground", area="Alterac Valley", isScaling=true, scaleRank=2, comments="These AV quests apparently scale UP with level, unlike other quests. Verified from videos from last TBC" },
@@ -361,6 +361,7 @@ local questsMetadata = {
 	[3782] = { name="Morrowgrain Research", baseexp=680, qlvl=50, type="turnin", routes="Main,Strat,Solo", routePickup="ThunderBluff", routeSection="ThunderBluff", areaType="Zone", area="Thunder Bluff", },
 	[3786] = { name="Morrowgrain Research", baseexp=6800, qlvl=50, type="turnin", reqItems="11040-10", routes="Main,Strat,Solo", routePickup="ThunderBluff", routeSection="ThunderBluff", areaType="Zone", area="Thunder Bluff", },
 }
+
 for qID,q in pairs(questsMetadata) do
 	q.id = qID
 	q.exp = 0
